# rust_torch

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml  tasks.md
.github/workflows/: ci.yml
benches/: bench_autograd.rs  bench_elementwise.rs  bench_governance_plan.rs  bench_layout_validation.rs  bench_metrics_logger.rs  bench_mlp_classifier.rs  bench_run_summary.rs
cpp_ext/: README.md  backend.cpp  build.py
docs/: architecture.md  technical_dashboard.html  tensor_layout.md  torch_integration_plan.md
examples/: compile_backend_demo.py  eager_privateuse1_demo.py  mnist_rustorch_demo.py
python/rust_backend/: __init__.py  backend.py  backend_check.py  fx_runner.py
scripts/: bench_audit_verify.py  bench_execution.sh  bench_execution_ledger_verify.sh  bench_plan_digest.py  bench_run_compare.py  bench_run_validate.py  build_cpp_ext.sh  build_rust_python.sh  run_governance_perf.sh
scripts/ci/: check_all.sh  (+1 more)
src/: api.rs  audit.rs  autograd.rs  checkpoint.rs  data.rs  error.rs  execution.rs  experiment.rs  governance.rs  lib.rs  main.rs  models.rs  ops.rs  optim.rs  py.rs  storage.rs  telemetry.rs  tensor.rs  training.rs
tests/: audit_plan_anchoring.rs  audit_verification.rs  backward_ops.rs  checkpoint.rs  conftest.py  error_semantics.rs  execution_engine.rs  execution_ledger_verification.rs  execution_planner.rs  execution_stress.rs  experiment_compare.rs  experiment_governance.rs  experiment_graph.rs  experiment_reporting.rs  experiment_schema_validation.rs  experiment_summary.rs  forward_ops.rs  governance_plan_tests.rs  governance_race_tests.rs  governance_scheduler.rs  integration.rs  layout_semantics.rs  metrics_logger.rs  test_fx_runner.py  test_parity_harness.py  test_tensor.py
(+3 files in other folders)
