
[package]
name = "rustorch"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustorch"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python-bindings"]
python-bindings = ["pyo3", "numpy", "ndarray"]

[dependencies]
rayon = "1.10"
anyhow = "1"
thiserror = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
numpy = { version = "0.21", optional = true }
ndarray = { version = "0.15", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_elementwise"
harness = false

[[bench]]
name = "bench_layout_validation"
harness = false

[[bin]]
name = "rustorch_cli"
path = "src/main.rs"
