[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rustorch"
version = "0.1.0"
description = "Rust tensor & autograd core with PyTorch-front-end paths"
authors = [{name="You", email="you@example.com"}]
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]